SERVER-41137 Propagate WriteConcern in abortTransaction