src/mongo/s/transaction_router.cpp
@@ -877,7 +877,8 @@ BSONObj TransactionRouter::abortTransaction(OperationContext* opCtx) {
 
     _terminationInitiated = true;
 
-    auto abortCmd = BSON("abortTransaction" << 1);
+    auto abortCmd = BSON("abortTransaction" << 1 << WriteConcernOptions::kWriteConcernField
+                                            << opCtx->getWriteConcern().toBSON());
     std::vector<AsyncRequestsSender::Request> abortRequests;
     for (const auto& participantEntry : _participants) {
         abortRequests.emplace_back(ShardId(participantEntry.first), abortCmd);
